--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = sbJekdl4HelDz75UyJiCjzfERs4a1d51oOfrNDcamLQ=
 
 NODE_ENV = development
+ 
+
+ //you can start backend from npm run server and run frontend from npm run dev//
