--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT =  8000
+PORT =  5000
 MONGO_DB_URI = mongodb+srv://hemantbarasker01:A2h7KpROmd3iApKr@cluster0.kjwfa.mongodb.net/Chat-App?
 retryWrites=true&w=majority&appName=Cluster0
 
@@ -8,3 +8,5 @@ NODE_ENV = development
  
 
  //you can start backend from npm run server and run frontend from npm run dev//
+
+ Start ChatApp section in  NPM START
